<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To-Do</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    
    <string name="email">Email-id</string>
    <string name="pass">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="forgotpass">FORGOT PASSWORD</string>
    <string name="skip">SKIP</string>
    <string name="register">REGISTER</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phnum">Phone Number</string>
    <string name="app">Appoinment</string>
    <string name="prdt">Date for Appoinment</string>
    <string name="create">CREATE</string>
    <string name="wrd">Event</string>
    <string name="mng">Decsription</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="upmng">Update Event</string>
    <string name="delwrd">Delete Event</string>
     <string name="crtwrd">Create Event</string>
      <string name="evdate">Date</string>
       <string name="evtime">Time</string>
    

</resources>